--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.2.3
 Django==2.2.9
+django-countries==5.5
 entrypoints==0.3
 mccabe==0.6.1
 Pillow==7.0.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
 pytz==2019.3
+six==1.14.0
 sqlparse==0.3.0
