--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ media
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
 
+uploads/
+
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
 *.py[cod]
@@ -349,5 +351,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+
 
 # End of https://www.gitignore.io/api/git,linux,macos,django,python,windows,pycharm+all,jupyternotebooks
