--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ decorator==4.4.1
 defusedxml==0.6.0
 Django==2.2.9
 django-countries==5.5
+django-dotenv==1.4.2
 django-extensions==2.2.6
 django-seed==0.1.9
 entrypoints==0.3
