--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.2.3
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
+certifi==2019.11.28
+chardet==3.0.4
 decorator==4.4.1
 defusedxml==0.6.0
 Django==2.2.9
@@ -12,6 +14,7 @@ django-extensions==2.2.6
 django-seed==0.1.9
 entrypoints==0.3
 Faker==4.0.0
+idna==2.8
 importlib-metadata==1.4.0
 ipykernel==5.1.3
 ipython==7.11.1
@@ -43,6 +46,7 @@ pyrsistent==0.15.7
 python-dateutil==2.8.1
 pytz==2019.3
 pyzmq==18.1.1
+requests==2.22.0
 Send2Trash==1.5.0
 six==1.14.0
 sqlparse==0.3.0
@@ -51,6 +55,7 @@ testpath==0.4.4
 text-unidecode==1.3
 tornado==6.0.3
 traitlets==4.3.3
+urllib3==1.25.8
 wcwidth==0.1.8
 webencodings==0.5.1
 zipp==2.0.1
