--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ media
 # <django-project-name>/staticfiles/
 
 uploads/
+node_modules/
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
