--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ media
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
 
-uploads/
+uploads/**/*
 static/css/
 node_modules/
 
