--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,11 @@ media
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
 
-uploads/**/*
-static/css/
+uploads/*/*
+!uploads/*/.gitkeep
+
+static/css/*
+!static/css/.gitkeep
 node_modules/
 
 ### Django.Python Stack ###g
