--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is AirBnb Clone project with [Nomadcoders](https://github.com/nomadcoders/airbnb-clone)",
   "main": "index.js",
   "scripts": {
-    "css": "gulp"
+    "css": "cd app && gulp"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.0",
