--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-extensions==2.2.6
 django-seed==0.1.9
 entrypoints==0.3
 Faker==4.0.0
+gunicorn==20.0.4
 idna==2.8
 importlib-metadata==1.4.0
 ipykernel==5.1.3
