--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ pickleshare==0.7.5
 Pillow==7.0.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.2
+psycopg2-binary==2.8.4
 ptyprocess==0.6.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
