--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+boto3==1.12.6
 Django==2.2.10
 django-countries==5.5
 # django-dotenv==1.4.2
+# django-extensions==2.2.6
 django-seed==0.1.9
+django-storages==1.9.1
 gunicorn==20.0.4
+Pillow==7.0.0
 psycopg2-binary==2.8.4
+pytz==2019.3
+requests==2.22.0
