--- a/.config/supervisord.conf
+++ b/.config/supervisord.conf
@@ -7,3 +7,8 @@ command=nginx -g "daemon off;"
 
 [program:gunicorn]
 command=gunicorn -c /srv/airbnb-clone/.config/gunicorn.py config.wsgi
+stderr_log=/var/log/gunicorn/gunicorn.err.log
+stdout_log=/var/log/gunicorn/gunicorn.out.log
+
+[group:airbnb-clone]
+programs:nginx,gunicorn
