--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ media
 .env
 secrets.json
 *.mo
+/.cert/*
+!.cert/.gitkeep
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
